theme.less
/* ... */
.pagination > .next > a:hover,
.pagination > .last > a:hover {
  border-right-color: #000;
}

.pagination > .disabled > span,
.pagination > .disabled > span:hover,
.pagination > .disabled > span:focus,
.pagination > .disabled > a,
.pagination > .disabled > a:hover,
.pagination > .disabled > a:focus {
  background: #151828;
}

.category > ul > li .tag-list .tag {
  background: #43a866;
  color: @ll-blue;
  border-radius: 5px;
  padding: 2px;
  font-size: 1rem;
  font-weight: bold;
}

.post-wrapper {
  margin-left: 4rem;
  border-radius: 5px;
  transition: box-shadow 0.75s ease-in-out;
}

.topic .posts [component="post"].highlight .post-wrapper {
  box-shadow: #bfcde0 0 0 7px 2px;
}

.post-header {
  display: flex;
  justify-content: flex-end;
  margin: 1.5rem 1.5rem 0.5rem 0;
}

.post-container {
  display: flex;
  flex-direction: column;
  background: @ll-blue;
  border-radius: 5px;
  box-shadow: inset #232940 0px 0px 9px 4px;
  transition: box-shadow 0.75s ease-in-out;
}

.topic .posts [component="post"].highlight .post-container {
  box-shadow: inset #232940 0px 0px;
}

.topic .content {
  display: flex;
  flex-direction: column;
  overflow: visible;
  margin: 0;
  min-height: 20rem;
  padding: 0 2rem;
  border-radius: 5px;
}

.topic .content hr {
  width: 96%;
  margin: 10px auto;
}

.topic .posts .content .toggle {
  border: 1px solid #2a3256;
  background: #2a3256;
}

.topic [component="post/parent"] {
  font-size: 12px;
  padding: 5px 10px;
  background-color: #222940;
}

.topic .post-signature {
  margin: 0 2rem;
  border-color: #555569;
}

li[component="post"] a.permalink {
  text-decoration: none;
}

.post-footer {
  display: flex;
  align-items: flex-end;
  align-self: flex-end;
  flex: 1 1 auto;
  margin: 0 1.5rem 1.5rem;
}

.footer-container {
  display: flex;
  align-items: center;
}

.votes {
  margin-right: 5px;
}

.topic .post-tools .btn {
  padding: 0.25rem 1rem;
}

.post-tool {
  margin: 0 0 0 0.5rem;
}

.topic .posts .content [component="post/tools"] ul > li {
  list-style: none;
}

.topic .posts [component="post"].highlight > hr {
  border-color: #bfcde0;
  box-shadow: 0px 0px 3px 1px #bfcde0;
}

.topic .posts [component="post"] > hr {
  transition-property: border-color, box-shadow;
}

.topic .posts {
  h1 {
    font-size: 36px;
  }

  h2 {
    margin-top: 10px;
    font-size: 30px;
  }

  h3 {
    margin-top: 10px;
    font-size: 24px;
    text-transform: none;
    font-weight: inherit;
  }

  h4 {
    margin-top: 10px;
    font-size: 18px;
  }

  h5 {
    margin-top: 10px;
    font-weight: inherit;
    text-transform: none;
  }
}

.stats-container {
  margin-right: 15px;
  position: relative;
  display: inline;
}

.stats-container .stats {
  margin: 0;
}

.category > ul:last-child li {
  border-bottom: 1px solid #000000;
}

/**
* Post author info box
**/
.rpg-box {
  background: linear-gradient(180deg, #222942 0, @ll-blue);
  border: 2px ridge #a3a3a3;
  border-radius: 5px;
  box-shadow: 5px 5px 10px 0 #080812;
}

.author-info-box {
  margin-left: -15%;
  margin-bottom: 1rem;
  padding: 5px 15px;
  width: 17%;
  position: sticky;
  top: 9rem;
  text-align: center;
  float: left;
}

@media (max-width: 1699px) {
  .author-info-box {
    margin-left: -10%;
  }

  .topic .post-wrapper {
    margin-left: 8.75%;
  }
}

@media (max-width: 1399px) {
  .author-info-box {
    margin-left: -5%;
  }

  .topic .post-wrapper {
    margin-left: 13.75%;
  }
}

@media (max-width: 1250px) {
  .author-info-box {
    margin-left: -2%;
  }

  .topic .post-wrapper {
    margin-left: 16.75%;
  }
}

.author-info-box .row {
  display: flex;
  align-items: center;
}

.author-info-box .icon {
  display: flex;
  justify-content: center;
}

.author-name-container {
  display: flex;
  justify-content: center;
  margin-left: -10px;
  margin-right: -10px;
  word-break: break-word;
}

.author-name {
  font-family: "Open Sans Condensed";
  font-size: 2.25rem;
  font-weight: 400;
  text-shadow: 2px 2px 0 #000;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.topic .posts .icon {
  margin-top: 5px;
}

.topic .posts .icon .user-icon,
.topic .posts .icon img {
  margin-right: 0;
  width: 70px;
  height: 70px;
  line-height: 69px;
  font-size: 3rem;
}

.topic .posts .icon > a > .status {
  right: 0px;
  top: 0px;
}

.author-info-box hr {
  margin: 0.5rem 0;
}

.author-stats {
  justify-content: center;
  color: #ababab;
}

.social-links {
  justify-content: space-between;
  margin-top: 0.25rem;
  font-size: 16px;
  line-height: 1;
}

.social-links > a {
  text-decoration: none;
}

.social-links {
  span {
    cursor: pointer;
  }
  span,
  a {
    text-shadow: #000 1px 1px 6px;
  }
  a:focus,
  a:active {
    outline: none;
  }
  .twitter:hover,
  .twitter:active,
  .twitter:focus {
    color: #1da1f2;
  }
  .discord {
    color: @ll-white;
  }
  .discord:hover,
  .discord:active,
  .discord:focus {
    color: #7289da;
  }
  .twitch:hover,
  .twitch:active,
  .twitch:focus {
    color: #6441a4;
  }
  .youtube:hover,
  .youtube:active,
  .youtube:focus {
    color: #ff0000;
  }
  .steam:hover,
  .steam:active,
  .steam:focus {
    color: #000;
  }
  a:active {
    text-shadow: none;
    left: 1px;
    top: 1px;
    position: relative;
  }
}

pre {
  background-color: #232427;
  border-color: #333;
}

pre code, code {
  color: #9bb79b;
  background-color: #232427;
}

/** Mobile topic view. */
.author-user-name-hint {
  flex: 1 0 auto;
  margin: 0 1rem;
  font-size: 1.25rem;
  color: #ababab;
}
/* ... */

